# automata-v3

./: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/fulfillment/: Cargo.toml
pallets/fulfillment/src/: lib.rs
pallets/marketplace/: Cargo.toml
pallets/marketplace/src/: lib.rs
pallets/stake/: Cargo.toml
pallets/stake/src/: lib.rs  offline.rs
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
