[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'
hex-literal = { version = '0.3.1' }

# Substrate dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-cli = {features = ['wasmtime'],  git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-executor = {features = ['wasmtime'],  git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-keystore = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-service = {features = ['wasmtime'],  git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sp-api = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sp-core = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', tag = 'v3.0.0'}
pallet-evm = { git = "https://github.com/automata-network/frontier.git", tag = "v2.1.0", default-features = false }

# local dependencies
automata-runtime = {version = '3.0.0', path = '../runtime'}
automata-primitives = { path = "../primitives" }

[features]
default = []
runtime-benchmarks = ['automata-runtime/runtime-benchmarks']
