[package]
name = "automata-primitives"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0' }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0' }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0' }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0' }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
