[package]
authors = ['Automata Team']
edition = '2018'
name = 'pallet-marketplace'
version = '3.0.0'
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0' }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0' }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0' }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0' }
primitives = { package = "automata-primitives", path = "../../primitives", default-features = false }
pallet-stake = { default-features = false, path = '../stake' }
fulfillment = { package = "pallet-fulfillment", path = "../fulfillment", default-features = false }


[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0' }
sp-core = { git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0' }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", tag = 'v3.0.0' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'primitives/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-stake/std',
    'fulfillment/std'
]
